# mailman_ldaprecipient_plugin

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/workflows/: python.yml
mailman_ldaprecipient_plugin/: plugin.py
mailman_ldaprecipient_plugin/handlers/: handlers.py
mailman_ldaprecipient_plugin/ldap/: __init__.py
mailman_ldaprecipient_plugin/pipelines/: pipelines.py
mailman_ldaprecipient_plugin/rules/: rules.py
postorius_ldap_members/: apps.py  views.py
