[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "mailman_ldaprecipient_plugin"
dependencies = [
    'ldap3>=2.9.1'
]
requires-python = ">= 3.10"
authors = [
  {name = "Bennet Becker", email = "dev@bennet.cc"},
]
readme = "README.md"
description = "Mailman LDAP Members Plugin"
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",

    # Indicate who your project is intended for
    "Intended Audience :: System Administrators",

    "Topic :: Communications :: Email",
    "Topic :: Communications :: Email :: Mailing List Servers",

    "Environment :: Plugins",

    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Repository = "https://github.com/bennet0496/mailman_ldaprecipient_plugin"
"Bug Tracker" = "https://github.com/bennet0496/mailman_ldaprecipient_plugin/issues"